[package]
name = "cargo-screeps"
version = "0.5.0"
edition = "2021"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://github.com/daboross/screeps-in-rust-via-wasm/cargo-screeps/"
include = [
    "Cargo.toml",
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "resources/**/*",
    "LICENSE",
    "README.md",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/cargo-screeps/"
description = "Build tool for deploying Rust WASM code to Screeps game servers"

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4", features = ["cargo"] }
fern = "0.6"
log = "0.4"
merge = "0.1"
pathdiff = "0.2"
regex = "1.7"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
structopt = "0.3"
toml = "0.7"
wasm-pack = { version = "0.11", default-features = false }
